0022685: Missing parentheses around trigraph operator