src/Aspect/Aspect_MarkMapEntry.cxx
@@ -1,4 +1,3 @@
-
 // File         Aspect_MarkMapEntry.cxx
 // Created      Janvier 1995
 // Author       GG
@@ -125,11 +124,11 @@ void Aspect_MarkMapEntry::Dump () const {
   Aspect_TypeOfMarker type = MyStyle.Type() ;
   Standard_Integer i,length = MyStyle.Length() ;
   Standard_Boolean draw = Standard_False ;
-  Standard_Real X,Y;
+  Standard_Real X(0),Y(0);
 
   cout << " Aspect_MarkMapEntry::Dump ()\n";
-  cout << "      MyStyleIsDef : " << (MyStyleIsDef) ? "True\n" : "False\n";
-  cout << "      MyIndexIsDef : " << (MyIndexIsDef) ? "True\n" : "False\n";
+  cout << "      MyStyleIsDef : " << (MyStyleIsDef ? "True\n" : "False\n");
+  cout << "      MyIndexIsDef : " << (MyIndexIsDef ? "True\n" : "False\n");
   cout << "      MarkerStyle : " << (Standard_Integer) type << " Length : " << length << "\n";//WNT
   if( length ) {
     for( i=1 ; i<=length ; i++ ) 
