src/Aspect/Aspect_TypeMapEntry.cxx
@@ -1,4 +1,3 @@
-
 // File         Aspect_TypeMapEntry.cxx
 // Created      Septembre 1993
 // Author       GG
@@ -141,8 +140,8 @@ void Aspect_TypeMapEntry::Dump () const {
   Standard_Integer i,length = MyType.Length() ;
 
   cout << " Aspect_TypeMapEntry::Dump ()\n";
-  cout << "      MyTypeIsDef : " << (MyTypeIsDef) ? "True\n" : "False\n";
-  cout << "      MyIndexIsDef : " << (MyIndexIsDef) ? "True\n" : "False\n";
+  cout << "      MyTypeIsDef : " << (MyTypeIsDef ? "True\n" : "False\n");
+  cout << "      MyIndexIsDef : " << (MyIndexIsDef ? "True\n" : "False\n");
   cout << "      LineStyle : " << (Standard_Integer) style << " Length : " << length << "\n";//WNT
   if( length ) {
     for( i=(MyType.Values()).Lower() ; i<=(MyType.Values()).Upper() ; i++ ) 
