src/TDataStd/TDataStd_IntPackedMap.cxx
@@ -187,7 +187,7 @@ Standard_OStream& TDataStd_IntPackedMap::Dump(Standard_OStream& theOS) const
 {
   Standard_OStream& anOS = TDF_Attribute::Dump( theOS );
   anOS << "IntPackedMap size = " << Extent();
-  anOS << " Delta is " << myIsDelta ? "ON":"OFF";
+  anOS << " Delta is " << (myIsDelta ? "ON":"OFF");
   anOS << endl;
   return anOS;
 }
