src/TDataStd/TDataStd_IntegerArray.cxx
@@ -244,7 +244,7 @@ Standard_OStream& TDataStd_IntegerArray::Dump (Standard_OStream& anOS) const
     for(i = lower; i<=upper; i++)
       anOS << " " <<myValue->Value(i);
   }
-  anOS << " Delta is " << myIsDelta ? "ON":"OFF";
+  anOS << " Delta is " << (myIsDelta ? "ON":"OFF");
   anOS << endl;
 
   // anOS <<"\nAttribute fields: ";
